<resources>
    <string name="app_name">UsolibreriaROOM</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtIngrese_User">Ingrese un nuevo Usuario</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Contraseña</string>
    <string name="txt_name">Nombre</string>
    <string name="txy_apellido">Apellido</string>
    <string name="txt_guardar">Guardar</string>
</resources>